Add GenericLoader in notebooks

--- a/docs/docs/integrations/document_loaders/pdfplumber.ipynb
+++ b/docs/docs/integrations/document_loaders/pdfplumber.ipynb
@@ -43,8 +43,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T17:17:58.892145Z",
-     "start_time": "2024-12-13T17:17:58.887594Z"
+     "end_time": "2024-12-16T07:56:31.251050Z",
+     "start_time": "2024-12-16T07:56:31.245949Z"
     }
    },
    "cell_type": "code",
@@ -67,8 +67,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T17:18:01.673508Z",
-     "start_time": "2024-12-13T17:17:58.932912Z"
+     "end_time": "2024-12-16T07:56:35.538834Z",
+     "start_time": "2024-12-16T07:56:32.478301Z"
     }
    },
    "cell_type": "code",
@@ -82,9 +82,7 @@
      "output_type": "stream",
      "text": [
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "\u001B[31mERROR: Cannot install patch-langchain-pdf-loader 0.0.0a87+bbdc781 (from /home/mame/PycharmProjects/patch_langchain_common/dist/patch_langchain_pdf_loader-0.0.0a87+bbdc781-py3-none-any.whl) and patch-langchain-pdf-loader 0.0.0a98+816c68b (from /home/mame/PycharmProjects/patch_langchain_common/dist/patch_langchain_pdf_loader-0.0.0a98+816c68b-py3-none-any.whl) because these package versions have conflicting dependencies.\u001B[0m\u001B[31m\r\n",
-      "\u001B[0m\u001B[31mERROR: ResolutionImpossible: for help visit https://pip.pypa.io/en/latest/topics/dependency-resolution/#dealing-with-dependency-conflicts\u001B[0m\u001B[31m\r\n",
-      "\u001B[0mNote: you may need to restart the kernel to use updated packages.\n"
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -102,8 +100,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T17:18:02.838019Z",
-     "start_time": "2024-12-13T17:18:01.869470Z"
+     "end_time": "2024-12-16T07:56:38.498598Z",
+     "start_time": "2024-12-16T07:56:37.749096Z"
     }
    },
    "cell_type": "code",
@@ -124,8 +122,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T17:18:04.496841Z",
-     "start_time": "2024-12-13T17:18:02.848345Z"
+     "end_time": "2024-12-16T07:56:41.116977Z",
+     "start_time": "2024-12-16T07:56:39.898627Z"
     }
    },
    "cell_type": "code",
@@ -150,8 +148,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T17:18:04.510585Z",
-     "start_time": "2024-12-13T17:18:04.506901Z"
+     "end_time": "2024-12-16T07:56:41.932Z",
+     "start_time": "2024-12-16T07:56:41.928084Z"
     }
    },
    "cell_type": "code",
@@ -193,8 +191,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T17:18:06.121856Z",
-     "start_time": "2024-12-13T17:18:04.561120Z"
+     "end_time": "2024-12-16T07:56:44.792140Z",
+     "start_time": "2024-12-16T07:56:43.535495Z"
     }
    },
    "cell_type": "code",
@@ -226,8 +224,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T17:18:06.141166Z",
-     "start_time": "2024-12-13T17:18:06.136151Z"
+     "end_time": "2024-12-16T07:56:44.869732Z",
+     "start_time": "2024-12-16T07:56:44.866929Z"
     }
    },
    "cell_type": "code",
@@ -302,8 +300,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T17:18:07.801526Z",
-     "start_time": "2024-12-13T17:18:06.184546Z"
+     "end_time": "2024-12-16T07:56:49.282685Z",
+     "start_time": "2024-12-16T07:56:48.107245Z"
     }
    },
    "cell_type": "code",
@@ -355,8 +353,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T17:18:09.489433Z",
-     "start_time": "2024-12-13T17:18:07.812873Z"
+     "end_time": "2024-12-16T07:56:52.235453Z",
+     "start_time": "2024-12-16T07:56:51.064125Z"
     }
    },
    "cell_type": "code",
@@ -407,8 +405,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T17:18:11.232671Z",
-     "start_time": "2024-12-13T17:18:09.512498Z"
+     "end_time": "2024-12-16T07:56:55.237613Z",
+     "start_time": "2024-12-16T07:56:54.106257Z"
     }
    },
    "cell_type": "code",
@@ -556,8 +554,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T17:18:12.900907Z",
-     "start_time": "2024-12-13T17:18:11.241231Z"
+     "end_time": "2024-12-16T07:56:59.781971Z",
+     "start_time": "2024-12-16T07:56:58.488320Z"
     }
    },
    "cell_type": "code",
@@ -576,8 +574,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T17:19:06.498801Z",
-     "start_time": "2024-12-13T17:18:12.912719Z"
+     "end_time": "2024-12-16T07:57:25.949586Z",
+     "start_time": "2024-12-16T07:57:00.612938Z"
     }
    },
    "cell_type": "code",
@@ -682,8 +680,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T17:19:08.131483Z",
-     "start_time": "2024-12-13T17:19:06.547479Z"
+     "end_time": "2024-12-16T07:57:30.595003Z",
+     "start_time": "2024-12-16T07:57:29.343962Z"
     }
    },
    "cell_type": "code",
@@ -702,8 +700,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T17:19:23.323727Z",
-     "start_time": "2024-12-13T17:19:08.158692Z"
+     "end_time": "2024-12-16T07:57:42.700918Z",
+     "start_time": "2024-12-16T07:57:31.294402Z"
     }
    },
    "cell_type": "code",
@@ -758,9 +756,7 @@
       "\n",
       "x-interval\n",
       "\n",
-      " \n",
-      "\n",
-      "JeAsaqul-A\n",
+      "JeAsaqui-A\n",
       "\n",
       "Coordinate\n",
       "+\n",
@@ -771,34 +767,18 @@
       "\n",
       "Quadrilateral\n",
       "\n",
-      " \n",
-      "\n",
       "Block\n",
       "Text\n",
-      "\n",
-      " \n",
-      "\n",
-      " \n",
-      "\n",
-      " \n",
       "\n",
       "Block\n",
       "Type\n",
       "\n",
-      " \n",
-      "\n",
-      " \n",
-      "\n",
       "Reading\n",
       "Order\n",
       "\n",
-      " \n",
-      "\n",
-      " \n",
-      "\n",
       "layout\n",
       "\n",
-      "[ coordinatel textblock1 |\n",
+      "[ coordinate1 textblock1 |\n",
       "'\n",
       "\n",
       "“y textblock2 , layout1 ]\n",
@@ -820,8 +800,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T17:19:24.915554Z",
-     "start_time": "2024-12-13T17:19:23.346960Z"
+     "end_time": "2024-12-16T07:57:45.976661Z",
+     "start_time": "2024-12-16T07:57:44.669152Z"
     }
    },
    "cell_type": "code",
@@ -840,8 +820,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T17:19:24.933743Z",
-     "start_time": "2024-12-13T17:19:24.924742Z"
+     "end_time": "2024-12-16T07:57:46.601679Z",
+     "start_time": "2024-12-16T07:57:46.559728Z"
     }
    },
    "cell_type": "code",
@@ -868,8 +848,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T17:19:24.979686Z",
-     "start_time": "2024-12-13T17:19:24.975584Z"
+     "end_time": "2024-12-16T07:57:47.460963Z",
+     "start_time": "2024-12-16T07:57:47.454622Z"
     }
    },
    "cell_type": "code",
@@ -885,8 +865,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T17:20:14.508680Z",
-     "start_time": "2024-12-13T17:19:25.028518Z"
+     "end_time": "2024-12-16T07:58:39.586496Z",
+     "start_time": "2024-12-16T07:57:48.400667Z"
     }
    },
    "cell_type": "code",
@@ -938,7 +918,7 @@
       "the Coordinate system, the TextBlock, and the Layout. They provide different\n",
       "levels of abstraction for the layout data, and a set of APIs are supported for\n",
       "transformations or operations on these classes.\n",
-      "![Summary: The image illustrates a hierarchical structure for layout elements in a document processing system, including \"Coordinate,\" \"textblock,\" and \"layout.\" It shows different geometric shapes like Rectangle and Quadrilateral, and highlights features such as Block Text, Block Type, and Reading Order. The diagram emphasizes that the same transformation and operation APIs apply across all elements.\n",
+      "![Summary: Diagram illustrating the structure of layout elements with coordinates, text blocks, and layout lists. It shows the transformation and operation APIs for different geometrical shapes (rectangle, quadrilateral) and their features.\n",
       "\n",
       "Extracted Text:\n",
       "- Coordinate\n",
@@ -946,17 +926,24 @@
       "- y-interval\n",
       "- start\n",
       "- end\n",
+      "- (x1, y1)\n",
       "- Rectangle\n",
+      "- (x2, y2)\n",
+      "- (x1, y1)\n",
+      "- (x2, y2)\n",
+      "- (x3, y3)\n",
+      "- (x4, y4)\n",
       "- Quadrilateral\n",
+      "- The same transformation and operation APIs\n",
       "- textblock\n",
       "- Coordinate\n",
-      "- Extra features\n",
+      "- + Extra features\n",
       "- Block Text\n",
       "- Block Type\n",
       "- Reading Order\n",
       "- layout\n",
-      "- A list of the layout elements\n",
-      "- The same transformation and operation APIs](.)\n",
+      "- [ coordinate1, textblock1, ..., textblock2, layout1 \\\\]\n",
+      "- A list of the layout elements](.)\n",
       "\n"
      ]
     }
@@ -976,8 +963,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T17:20:16.251419Z",
-     "start_time": "2024-12-13T17:20:14.558838Z"
+     "end_time": "2024-12-16T07:58:45.091089Z",
+     "start_time": "2024-12-16T07:58:43.831386Z"
     }
    },
    "cell_type": "code",
@@ -1058,6 +1045,109 @@
     }
    ],
    "execution_count": 19
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Working with Files\n",
+    "\n",
+    "Many document loaders involve parsing files. The difference between such loaders usually stems from how the file is parsed, rather than how the file is loaded. For example, you can use `open` to read the binary content of either a PDF or a markdown file, but you need different parsing logic to convert that binary data into text.\n",
+    "\n",
+    "As a result, it can be helpful to decouple the parsing logic from the loading logic, which makes it easier to re-use a given parser regardless of how the data was loaded.\n",
+    "You can use this strategy to analyze different files, with the same parsing parameters."
+   ]
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-16T07:58:48.082498Z",
+     "start_time": "2024-12-16T07:58:46.938120Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from patch_langchain_community.document_loaders.parsers import PDFPlumberParser\n",
+    "from langchain_community.document_loaders import FileSystemBlobLoader\n",
+    "from langchain_community.document_loaders.generic import GenericLoader\n",
+    "\n",
+    "loader=GenericLoader(\n",
+    "    blob_loader=FileSystemBlobLoader(\n",
+    "        path=\"./example_data/\",\n",
+    "        glob=\"*.pdf\",\n",
+    "    ),\n",
+    "    blob_parser=PDFPlumberParser()\n",
+    ")\n",
+    "docs=loader.load()\n",
+    "print(docs[0].page_content)\n",
+    "pprint.pp(docs[0].metadata)\n"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LayoutParser: A Unified Toolkit for Deep\n",
+      "Learning Based Document Image Analysis\n",
+      "Zejiang Shen1 ((cid:0)), Ruochen Zhang2, Melissa Dell3, Benjamin Charles Germain\n",
+      "Lee4, Jacob Carlson3, and Weining Li5\n",
+      "1 Allen Institute for AI\n",
+      "shannons@allenai.org\n",
+      "2 Brown University\n",
+      "ruochen zhang@brown.edu\n",
+      "3 Harvard University\n",
+      "{melissadell,jacob carlson}@fas.harvard.edu\n",
+      "4 University of Washington\n",
+      "bcgl@cs.washington.edu\n",
+      "5 University of Waterloo\n",
+      "w422li@uwaterloo.ca\n",
+      "Abstract. Recentadvancesindocumentimageanalysis(DIA)havebeen\n",
+      "primarily driven by the application of neural networks. Ideally, research\n",
+      "outcomescouldbeeasilydeployedinproductionandextendedforfurther\n",
+      "investigation. However, various factors like loosely organized codebases\n",
+      "and sophisticated model configurations complicate the easy reuse of im-\n",
+      "portantinnovationsbyawideaudience.Thoughtherehavebeenon-going\n",
+      "efforts to improve reusability and simplify deep learning (DL) model\n",
+      "developmentindisciplineslikenaturallanguageprocessingandcomputer\n",
+      "vision, none of them are optimized for challenges in the domain of DIA.\n",
+      "This represents a major gap in the existing toolkit, as DIA is central to\n",
+      "academicresearchacross awiderangeof disciplinesinthesocialsciences\n",
+      "and humanities. This paper introduces LayoutParser, an open-source\n",
+      "library for streamlining the usage of DL in DIA research and applica-\n",
+      "tions. The core LayoutParser library comes with a set of simple and\n",
+      "intuitiveinterfacesforapplyingandcustomizingDLmodelsforlayoutde-\n",
+      "tection,characterrecognition,andmanyotherdocumentprocessingtasks.\n",
+      "To promote extensibility, LayoutParser also incorporates a community\n",
+      "platform for sharing both pre-trained models and full document digiti-\n",
+      "zation pipelines. We demonstrate that LayoutParser is helpful for both\n",
+      "lightweight and large-scale digitization pipelines in real-word use cases.\n",
+      "The library is publicly available at https://layout-parser.github.io.\n",
+      "Keywords: DocumentImageAnalysis·DeepLearning·LayoutAnalysis\n",
+      "· Character Recognition · Open Source library · Toolkit.\n",
+      "1 Introduction\n",
+      "Deep Learning(DL)-based approaches are the state-of-the-art for a wide range of\n",
+      "documentimageanalysis(DIA)tasksincludingdocumentimageclassification[11,\n",
+      "1202 nuJ 12  ]VC.sc[  2v84351.3012:viXra\n",
+      "\n",
+      "{'author': '',\n",
+      " 'creationdate': '2021-06-22T01:27:10+00:00',\n",
+      " 'creator': 'LaTeX with hyperref',\n",
+      " 'keywords': '',\n",
+      " 'moddate': '2021-06-22T01:27:10+00:00',\n",
+      " 'ptex.fullbanner': 'This is pdfTeX, Version 3.14159265-2.6-1.40.21 (TeX Live '\n",
+      "                    '2020) kpathsea version 6.3.2',\n",
+      " 'producer': 'pdfTeX-1.40.21',\n",
+      " 'subject': '',\n",
+      " 'title': '',\n",
+      " 'trapped': 'False',\n",
+      " 'source': 'example_data/layout-parser-paper.pdf',\n",
+      " 'file_path': 'example_data/layout-parser-paper.pdf',\n",
+      " 'total_pages': 16,\n",
+      " 'page': 0}\n"
+     ]
+    }
+   ],
+   "execution_count": 20
   },
   {
    "metadata": {},
