--- a/docs/docs/integrations/document_loaders/pypdfloader.ipynb
+++ b/docs/docs/integrations/document_loaders/pypdfloader.ipynb
@@ -42,8 +42,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:14.127018712Z",
-     "start_time": "2024-12-13T14:30:58.448729Z"
+     "end_time": "2024-12-16T08:03:33.078326Z",
+     "start_time": "2024-12-16T08:03:33.076223Z"
     }
    },
    "cell_type": "code",
@@ -52,7 +52,7 @@
     "# os.environ[\"LANGSMITH_TRACING\"] = \"true\""
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -67,8 +67,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:14.128351216Z",
-     "start_time": "2024-12-13T14:30:58.729658Z"
+     "end_time": "2024-12-16T08:03:36.942505Z",
+     "start_time": "2024-12-16T08:03:33.979340Z"
     }
    },
    "source": [
@@ -81,12 +81,11 @@
      "output_type": "stream",
      "text": [
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "zsh:1: no matches found: ../../../../dist/patch_langchain_pdf_loader*.whl\r\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -101,8 +100,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:14.132852022Z",
-     "start_time": "2024-12-13T14:31:01.523501Z"
+     "end_time": "2024-12-16T08:03:36.985253Z",
+     "start_time": "2024-12-16T08:03:36.964299Z"
     }
    },
    "source": [
@@ -112,7 +111,7 @@
     "loader = PyPDFLoader(file_path)"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -125,8 +124,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:14.133473132Z",
-     "start_time": "2024-12-13T14:31:02.866634Z"
+     "end_time": "2024-12-16T08:03:37.320406Z",
+     "start_time": "2024-12-16T08:03:37.018480Z"
     }
    },
    "source": [
@@ -140,19 +139,19 @@
        "Document(metadata={'author': '', 'creationdate': '2021-06-22T01:27:10+00:00', 'creator': 'LaTeX with hyperref', 'keywords': '', 'moddate': '2021-06-22T01:27:10+00:00', 'ptex.fullbanner': 'This is pdfTeX, Version 3.14159265-2.6-1.40.21 (TeX Live 2020) kpathsea version 6.3.2', 'producer': 'pdfTeX-1.40.21', 'subject': '', 'title': '', 'trapped': '/False', 'source': './example_data/layout-parser-paper.pdf', 'total_pages': 16, 'page': 0}, page_content='LayoutParser: A Uniﬁed Toolkit for Deep\\nLearning Based Document Image Analysis\\nZejiang Shen1 (\\x00 ), Ruochen Zhang2, Melissa Dell3, Benjamin Charles Germain\\nLee4, Jacob Carlson3, and Weining Li5\\n1 Allen Institute for AI\\nshannons@allenai.org\\n2 Brown University\\nruochen zhang@brown.edu\\n3 Harvard University\\n{melissadell,jacob carlson}@fas.harvard.edu\\n4 University of Washington\\nbcgl@cs.washington.edu\\n5 University of Waterloo\\nw422li@uwaterloo.ca\\nAbstract. Recent advances in document image analysis (DIA) have been\\nprimarily driven by the application of neural networks. Ideally, research\\noutcomes could be easily deployed in production and extended for further\\ninvestigation. However, various factors like loosely organized codebases\\nand sophisticated model conﬁgurations complicate the easy reuse of im-\\nportant innovations by a wide audience. Though there have been on-going\\neﬀorts to improve reusability and simplify deep learning (DL) model\\ndevelopment in disciplines like natural language processing and computer\\nvision, none of them are optimized for challenges in the domain of DIA.\\nThis represents a major gap in the existing toolkit, as DIA is central to\\nacademic research across a wide range of disciplines in the social sciences\\nand humanities. This paper introduces LayoutParser, an open-source\\nlibrary for streamlining the usage of DL in DIA research and applica-\\ntions. The core LayoutParser library comes with a set of simple and\\nintuitive interfaces for applying and customizing DL models for layout de-\\ntection, character recognition, and many other document processing tasks.\\nTo promote extensibility, LayoutParser also incorporates a community\\nplatform for sharing both pre-trained models and full document digiti-\\nzation pipelines. We demonstrate that LayoutParser is helpful for both\\nlightweight and large-scale digitization pipelines in real-word use cases.\\nThe library is publicly available at https://layout-parser.github.io.\\nKeywords: Document Image Analysis · Deep Learning · Layout Analysis\\n· Character Recognition · Open Source library · Toolkit.\\n1 Introduction\\nDeep Learning(DL)-based approaches are the state-of-the-art for a wide range of\\ndocument image analysis (DIA) tasks including document image classiﬁcation [11,\\narXiv:2103.15348v2  [cs.CV]  21 Jun 2021')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 5
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:14.134096973Z",
-     "start_time": "2024-12-13T14:31:03.402804Z"
+     "end_time": "2024-12-16T08:03:37.400508Z",
+     "start_time": "2024-12-16T08:03:37.396100Z"
     }
    },
    "source": [
@@ -182,7 +181,7 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -941,6 +940,107 @@
     }
    ],
    "execution_count": 18
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Working with Files\n",
+    "\n",
+    "Many document loaders involve parsing files. The difference between such loaders usually stems from how the file is parsed, rather than how the file is loaded. For example, you can use `open` to read the binary content of either a PDF or a markdown file, but you need different parsing logic to convert that binary data into text.\n",
+    "\n",
+    "As a result, it can be helpful to decouple the parsing logic from the loading logic, which makes it easier to re-use a given parser regardless of how the data was loaded.\n",
+    "You can use this strategy to analyze different files, with the same parsing parameters."
+   ]
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-16T08:03:46.627524Z",
+     "start_time": "2024-12-16T08:03:46.371315Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from patch_langchain_community.document_loaders.parsers import PyPDFParser\n",
+    "from langchain_community.document_loaders import FileSystemBlobLoader\n",
+    "from langchain_community.document_loaders.generic import GenericLoader\n",
+    "\n",
+    "loader=GenericLoader(\n",
+    "    blob_loader=FileSystemBlobLoader(\n",
+    "        path=\"./example_data/\",\n",
+    "        glob=\"*.pdf\",\n",
+    "    ),\n",
+    "    blob_parser=PyPDFParser()\n",
+    ")\n",
+    "docs=loader.load()\n",
+    "print(docs[0].page_content)\n",
+    "pprint.pp(docs[0].metadata)\n"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LayoutParser: A Uniﬁed Toolkit for Deep\n",
+      "Learning Based Document Image Analysis\n",
+      "Zejiang Shen1 (\u0000 ), Ruochen Zhang2, Melissa Dell3, Benjamin Charles Germain\n",
+      "Lee4, Jacob Carlson3, and Weining Li5\n",
+      "1 Allen Institute for AI\n",
+      "shannons@allenai.org\n",
+      "2 Brown University\n",
+      "ruochen zhang@brown.edu\n",
+      "3 Harvard University\n",
+      "{melissadell,jacob carlson}@fas.harvard.edu\n",
+      "4 University of Washington\n",
+      "bcgl@cs.washington.edu\n",
+      "5 University of Waterloo\n",
+      "w422li@uwaterloo.ca\n",
+      "Abstract. Recent advances in document image analysis (DIA) have been\n",
+      "primarily driven by the application of neural networks. Ideally, research\n",
+      "outcomes could be easily deployed in production and extended for further\n",
+      "investigation. However, various factors like loosely organized codebases\n",
+      "and sophisticated model conﬁgurations complicate the easy reuse of im-\n",
+      "portant innovations by a wide audience. Though there have been on-going\n",
+      "eﬀorts to improve reusability and simplify deep learning (DL) model\n",
+      "development in disciplines like natural language processing and computer\n",
+      "vision, none of them are optimized for challenges in the domain of DIA.\n",
+      "This represents a major gap in the existing toolkit, as DIA is central to\n",
+      "academic research across a wide range of disciplines in the social sciences\n",
+      "and humanities. This paper introduces LayoutParser, an open-source\n",
+      "library for streamlining the usage of DL in DIA research and applica-\n",
+      "tions. The core LayoutParser library comes with a set of simple and\n",
+      "intuitive interfaces for applying and customizing DL models for layout de-\n",
+      "tection, character recognition, and many other document processing tasks.\n",
+      "To promote extensibility, LayoutParser also incorporates a community\n",
+      "platform for sharing both pre-trained models and full document digiti-\n",
+      "zation pipelines. We demonstrate that LayoutParser is helpful for both\n",
+      "lightweight and large-scale digitization pipelines in real-word use cases.\n",
+      "The library is publicly available at https://layout-parser.github.io.\n",
+      "Keywords: Document Image Analysis · Deep Learning · Layout Analysis\n",
+      "· Character Recognition · Open Source library · Toolkit.\n",
+      "1 Introduction\n",
+      "Deep Learning(DL)-based approaches are the state-of-the-art for a wide range of\n",
+      "document image analysis (DIA) tasks including document image classiﬁcation [11,\n",
+      "arXiv:2103.15348v2  [cs.CV]  21 Jun 2021\n",
+      "{'author': '',\n",
+      " 'creationdate': '2021-06-22T01:27:10+00:00',\n",
+      " 'creator': 'LaTeX with hyperref',\n",
+      " 'keywords': '',\n",
+      " 'moddate': '2021-06-22T01:27:10+00:00',\n",
+      " 'ptex.fullbanner': 'This is pdfTeX, Version 3.14159265-2.6-1.40.21 (TeX Live '\n",
+      "                    '2020) kpathsea version 6.3.2',\n",
+      " 'producer': 'pdfTeX-1.40.21',\n",
+      " 'subject': '',\n",
+      " 'title': '',\n",
+      " 'trapped': '/False',\n",
+      " 'source': 'example_data/layout-parser-paper.pdf',\n",
+      " 'total_pages': 16,\n",
+      " 'page': 0}\n"
+     ]
+    }
+   ],
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
