--- a/docs/docs/integrations/document_loaders/pypdfium2.ipynb
+++ b/docs/docs/integrations/document_loaders/pypdfium2.ipynb
@@ -42,8 +42,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:19.953439178Z",
-     "start_time": "2024-12-13T14:30:55.798543Z"
+     "end_time": "2024-12-16T08:02:55.487973Z",
+     "start_time": "2024-12-16T08:02:55.483975Z"
     }
    },
    "cell_type": "code",
@@ -52,7 +52,7 @@
     "# os.environ[\"LANGSMITH_TRACING\"] = \"true\""
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -66,8 +66,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:19.956803772Z",
-     "start_time": "2024-12-13T14:30:55.842337Z"
+     "end_time": "2024-12-16T08:03:00.023615Z",
+     "start_time": "2024-12-16T08:02:56.930343Z"
     }
    },
    "cell_type": "code",
@@ -81,12 +81,11 @@
      "output_type": "stream",
      "text": [
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "zsh:1: no matches found: ../../../../dist/patch_langchain_pdf_loader*.whl\r\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -100,8 +99,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:19.957831596Z",
-     "start_time": "2024-12-13T14:30:59.735014Z"
+     "end_time": "2024-12-16T08:03:00.042471Z",
+     "start_time": "2024-12-16T08:03:00.032397Z"
     }
    },
    "cell_type": "code",
@@ -112,7 +111,7 @@
     "loader = PyPDFium2Loader(file_path)"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -122,8 +121,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:19.958400605Z",
-     "start_time": "2024-12-13T14:31:01.017888Z"
+     "end_time": "2024-12-16T08:03:01.338928Z",
+     "start_time": "2024-12-16T08:03:01.259785Z"
     }
    },
    "cell_type": "code",
@@ -136,7 +135,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/mame/PycharmProjects/patch_langchain_common/.venv/lib/python3.11/site-packages/pypdfium2/_helpers/textpage.py:80: UserWarning: get_text_range() call with default params will be implicitly redirected to get_text_bounded()\n",
+      "/home/pprados/workspace.bda/patch_langchain_common/.venv/lib/python3.12/site-packages/pypdfium2/_helpers/textpage.py:80: UserWarning: get_text_range() call with default params will be implicitly redirected to get_text_bounded()\n",
       "  warnings.warn(\"get_text_range() call with default params will be implicitly redirected to get_text_bounded()\")\n"
      ]
     },
@@ -146,18 +145,18 @@
        "Document(metadata={'title': '', 'author': '', 'subject': '', 'keywords': '', 'creator': 'LaTeX with hyperref', 'producer': 'pdfTeX-1.40.21', 'creationdate': '2021-06-22T01:27:10+00:00', 'moddate': '2021-06-22T01:27:10+00:00', 'source': './example_data/layout-parser-paper.pdf', 'total_pages': 16, 'page': 0}, page_content='LayoutParser: A Unified Toolkit for Deep\\nLearning Based Document Image Analysis\\nZejiang Shen\\n1\\n(), Ruochen Zhang\\n2\\n, Melissa Dell\\n3\\n, Benjamin Charles Germain\\nLee\\n4\\n, Jacob Carlson\\n3\\n, and Weining Li\\n5\\n1 Allen Institute for AI\\nshannons@allenai.org 2 Brown University\\nruochen zhang@brown.edu 3 Harvard University\\n{melissadell,jacob carlson}@fas.harvard.edu\\n4 University of Washington\\nbcgl@cs.washington.edu 5 University of Waterloo\\nw422li@uwaterloo.ca\\nAbstract. Recent advances in document image analysis (DIA) have been\\nprimarily driven by the application of neural networks. Ideally, research\\noutcomes could be easily deployed in production and extended for further\\ninvestigation. However, various factors like loosely organized codebases\\nand sophisticated model configurations complicate the easy reuse of im\\x02portant innovations by a wide audience. Though there have been on-going\\nefforts to improve reusability and simplify deep learning (DL) model\\ndevelopment in disciplines like natural language processing and computer\\nvision, none of them are optimized for challenges in the domain of DIA.\\nThis represents a major gap in the existing toolkit, as DIA is central to\\nacademic research across a wide range of disciplines in the social sciences\\nand humanities. This paper introduces LayoutParser, an open-source\\nlibrary for streamlining the usage of DL in DIA research and applica\\x02tions. The core LayoutParser library comes with a set of simple and\\nintuitive interfaces for applying and customizing DL models for layout de\\x02tection, character recognition, and many other document processing tasks.\\nTo promote extensibility, LayoutParser also incorporates a community\\nplatform for sharing both pre-trained models and full document digiti\\x02zation pipelines. We demonstrate that LayoutParser is helpful for both\\nlightweight and large-scale digitization pipelines in real-word use cases.\\nThe library is publicly available at https://layout-parser.github.io.\\nKeywords: Document Image Analysis· Deep Learning· Layout Analysis\\n· Character Recognition· Open Source library· Toolkit.\\n1 Introduction\\nDeep Learning(DL)-based approaches are the state-of-the-art for a wide range of\\ndocument image analysis (DIA) tasks including document image classification [11,\\narXiv:2103.15348v2 [cs.CV] 21 Jun 2021\\n')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:47:19.959133156Z",
-     "start_time": "2024-12-13T14:31:01.405692Z"
+     "end_time": "2024-12-16T08:03:02.535454Z",
+     "start_time": "2024-12-16T08:03:02.532180Z"
     }
    },
    "cell_type": "code",
@@ -185,7 +184,7 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -966,6 +965,109 @@
     }
    ],
    "execution_count": 18
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Working with Files\n",
+    "\n",
+    "Many document loaders involve parsing files. The difference between such loaders usually stems from how the file is parsed, rather than how the file is loaded. For example, you can use `open` to read the binary content of either a PDF or a markdown file, but you need different parsing logic to convert that binary data into text.\n",
+    "\n",
+    "As a result, it can be helpful to decouple the parsing logic from the loading logic, which makes it easier to re-use a given parser regardless of how the data was loaded.\n",
+    "You can use this strategy to analyze different files, with the same parsing parameters."
+   ]
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-16T08:03:11.281270Z",
+     "start_time": "2024-12-16T08:03:11.209441Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from patch_langchain_community.document_loaders.parsers import PyPDFium2Parser\n",
+    "from langchain_community.document_loaders import FileSystemBlobLoader\n",
+    "from langchain_community.document_loaders.generic import GenericLoader\n",
+    "\n",
+    "loader=GenericLoader(\n",
+    "    blob_loader=FileSystemBlobLoader(\n",
+    "        path=\"./example_data/\",\n",
+    "        glob=\"*.pdf\",\n",
+    "    ),\n",
+    "    blob_parser=PyPDFium2Parser()\n",
+    ")\n",
+    "docs=loader.load()\n",
+    "print(docs[0].page_content)\n",
+    "pprint.pp(docs[0].metadata)\n"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LayoutParser: A Unified Toolkit for Deep\n",
+      "Learning Based Document Image Analysis\n",
+      "Zejiang Shen\n",
+      "1\n",
+      "(), Ruochen Zhang\n",
+      "2\n",
+      ", Melissa Dell\n",
+      "3\n",
+      ", Benjamin Charles Germain\n",
+      "Lee\n",
+      "4\n",
+      ", Jacob Carlson\n",
+      "3\n",
+      ", and Weining Li\n",
+      "5\n",
+      "1 Allen Institute for AI\n",
+      "shannons@allenai.org 2 Brown University\n",
+      "ruochen zhang@brown.edu 3 Harvard University\n",
+      "{melissadell,jacob carlson}@fas.harvard.edu\n",
+      "4 University of Washington\n",
+      "bcgl@cs.washington.edu 5 University of Waterloo\n",
+      "w422li@uwaterloo.ca\n",
+      "Abstract. Recent advances in document image analysis (DIA) have been\n",
+      "primarily driven by the application of neural networks. Ideally, research\n",
+      "outcomes could be easily deployed in production and extended for further\n",
+      "investigation. However, various factors like loosely organized codebases\n",
+      "and sophisticated model configurations complicate the easy reuse of im\u0002portant innovations by a wide audience. Though there have been on-going\n",
+      "efforts to improve reusability and simplify deep learning (DL) model\n",
+      "development in disciplines like natural language processing and computer\n",
+      "vision, none of them are optimized for challenges in the domain of DIA.\n",
+      "This represents a major gap in the existing toolkit, as DIA is central to\n",
+      "academic research across a wide range of disciplines in the social sciences\n",
+      "and humanities. This paper introduces LayoutParser, an open-source\n",
+      "library for streamlining the usage of DL in DIA research and applica\u0002tions. The core LayoutParser library comes with a set of simple and\n",
+      "intuitive interfaces for applying and customizing DL models for layout de\u0002tection, character recognition, and many other document processing tasks.\n",
+      "To promote extensibility, LayoutParser also incorporates a community\n",
+      "platform for sharing both pre-trained models and full document digiti\u0002zation pipelines. We demonstrate that LayoutParser is helpful for both\n",
+      "lightweight and large-scale digitization pipelines in real-word use cases.\n",
+      "The library is publicly available at https://layout-parser.github.io.\n",
+      "Keywords: Document Image Analysis· Deep Learning· Layout Analysis\n",
+      "· Character Recognition· Open Source library· Toolkit.\n",
+      "1 Introduction\n",
+      "Deep Learning(DL)-based approaches are the state-of-the-art for a wide range of\n",
+      "document image analysis (DIA) tasks including document image classification [11,\n",
+      "arXiv:2103.15348v2 [cs.CV] 21 Jun 2021\n",
+      "\n",
+      "{'title': '',\n",
+      " 'author': '',\n",
+      " 'subject': '',\n",
+      " 'keywords': '',\n",
+      " 'creator': 'LaTeX with hyperref',\n",
+      " 'producer': 'pdfTeX-1.40.21',\n",
+      " 'creationdate': '2021-06-22T01:27:10+00:00',\n",
+      " 'moddate': '2021-06-22T01:27:10+00:00',\n",
+      " 'source': 'example_data/layout-parser-paper.pdf',\n",
+      " 'total_pages': 16,\n",
+      " 'page': 0}\n"
+     ]
+    }
+   ],
+   "execution_count": 7
   },
   {
    "metadata": {},
