--- a/docs/docs/integrations/document_loaders/zeroxpdfloader.ipynb
+++ b/docs/docs/integrations/document_loaders/zeroxpdfloader.ipynb
@@ -67,6 +67,7 @@
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
+    "\n",
     "# use nest_asyncio (only necessary inside of jupyter notebook)\n",
     "import nest_asyncio\n",
     "from patch_langchain_community.document_loaders.pdf import ZeroxPDFLoader\n",
@@ -371,16 +372,16 @@
     "from langchain_community.document_loaders import FileSystemBlobLoader\n",
     "from langchain_community.document_loaders.generic import GenericLoader\n",
     "\n",
-    "loader=GenericLoader(\n",
+    "loader = GenericLoader(\n",
     "    blob_loader=FileSystemBlobLoader(\n",
     "        path=\"./example_data/\",\n",
     "        glob=\"*.pdf\",\n",
     "    ),\n",
-    "    blob_parser=ZeroxPDFParser()\n",
+    "    blob_parser=ZeroxPDFParser(),\n",
     ")\n",
-    "docs=loader.load()\n",
+    "docs = loader.load()\n",
     "print(docs[0].page_content)\n",
-    "pprint.pp(docs[0].metadata)\n"
+    "pprint.pp(docs[0].metadata)"
    ],
    "outputs": [
     {
