--- a/docs/docs/integrations/document_loaders/pdfminer.ipynb
+++ b/docs/docs/integrations/document_loaders/pdfminer.ipynb
@@ -1301,16 +1301,16 @@
     "from langchain_community.document_loaders import FileSystemBlobLoader\n",
     "from langchain_community.document_loaders.generic import GenericLoader\n",
     "\n",
-    "loader=GenericLoader(\n",
+    "loader = GenericLoader(\n",
     "    blob_loader=FileSystemBlobLoader(\n",
     "        path=\"./example_data/\",\n",
     "        glob=\"*.pdf\",\n",
     "    ),\n",
-    "    blob_parser=PDFMinerParser()\n",
+    "    blob_parser=PDFMinerParser(),\n",
     ")\n",
-    "docs=loader.load()\n",
+    "docs = loader.load()\n",
     "print(docs[0].page_content)\n",
-    "pprint.pp(docs[0].metadata)\n"
+    "pprint.pp(docs[0].metadata)"
    ],
    "outputs": [
     {
