--- a/docs/docs/integrations/document_loaders/new_pdrouter.ipynb
+++ b/docs/docs/integrations/document_loaders/new_pdrouter.ipynb
@@ -78,9 +78,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\r\n",
-      "pdfplumber 0.11.4 requires pdfminer.six==20231228, but you have pdfminer-six 20240706 which is incompatible.\u001B[0m\u001B[31m\r\n",
-      "\u001B[0mNote: you may need to restart the kernel to use updated packages.\n",
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\r\n",
+      "pdfplumber 0.11.4 requires pdfminer.six==20231228, but you have pdfminer-six 20240706 which is incompatible.\u001b[0m\u001b[31m\r\n",
+      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -105,20 +105,30 @@
    },
    "cell_type": "code",
    "source": [
-    "from patch_langchain_community.document_loaders.parsers import PyMuPDFParser, \\\n",
-    "    PDFPlumberParser, PyPDFium2Parser\n",
+    "from patch_langchain_community.document_loaders.parsers import (\n",
+    "    PyMuPDFParser,\n",
+    "    PDFPlumberParser,\n",
+    "    PyPDFium2Parser,\n",
+    ")\n",
     "from patch_langchain_community.document_loaders import PDFRouterLoader\n",
     "\n",
-    "mode=\"single\"\n",
+    "mode = \"single\"\n",
     "routes = [\n",
-    "    (\"name\",{\"producer\":\"Microsoft\", \"creator\":\"Microsoft\"}, PyMuPDFParser(mode=mode)),\n",
-    "    (\"Latex\",{\"creator\":\"LaTeX\",\"page1\":\"Recent advances in document image analysis\"}, PDFPlumberParser(mode=mode)),\n",
-    "    (None, {}, PyPDFium2Parser(mode=mode))\n",
+    "    (\n",
+    "        \"name\",\n",
+    "        {\"producer\": \"Microsoft\", \"creator\": \"Microsoft\"},\n",
+    "        PyMuPDFParser(mode=mode),\n",
+    "    ),\n",
+    "    (\n",
+    "        \"Latex\",\n",
+    "        {\"creator\": \"LaTeX\", \"page1\": \"Recent advances in document image analysis\"},\n",
+    "        PDFPlumberParser(mode=mode),\n",
+    "    ),\n",
+    "    (None, {}, PyPDFium2Parser(mode=mode)),\n",
     "]\n",
     "\n",
     "file_path = \"./example_data/layout-parser-paper.pdf\"\n",
-    "loader = PDFRouterLoader(file_path,\n",
-    "                         routes=routes)"
+    "loader = PDFRouterLoader(file_path, routes=routes)"
    ],
    "outputs": [],
    "execution_count": 5
@@ -302,11 +312,19 @@
    },
    "cell_type": "code",
    "source": [
-    "mode=\"page\"\n",
+    "mode = \"page\"\n",
     "routes = [\n",
-    "    (\"name\",{\"producer\":\"Microsoft\", \"creator\":\"Microsoft\"}, PyMuPDFParser(mode=mode)),\n",
-    "    (\"Latex\",{\"creator\":\"LaTeX\",\"page1\":\"Recent advances in document image analysis\"}, PDFPlumberParser(mode=mode)),\n",
-    "    (None, {}, PyPDFium2Parser(mode=mode))\n",
+    "    (\n",
+    "        \"name\",\n",
+    "        {\"producer\": \"Microsoft\", \"creator\": \"Microsoft\"},\n",
+    "        PyMuPDFParser(mode=mode),\n",
+    "    ),\n",
+    "    (\n",
+    "        \"Latex\",\n",
+    "        {\"creator\": \"LaTeX\", \"page1\": \"Recent advances in document image analysis\"},\n",
+    "        PDFPlumberParser(mode=mode),\n",
+    "    ),\n",
+    "    (None, {}, PyPDFium2Parser(mode=mode)),\n",
     "]\n",
     "\n",
     "loader = PDFRouterLoader(\n",
@@ -363,11 +381,19 @@
    },
    "cell_type": "code",
    "source": [
-    "mode=\"single\"\n",
+    "mode = \"single\"\n",
     "routes = [\n",
-    "    (\"name\",{\"producer\":\"Microsoft\", \"creator\":\"Microsoft\"}, PyMuPDFParser(mode=mode)),\n",
-    "    (\"Latex\",{\"creator\":\"LaTeX\",\"page1\":\"Recent advances in document image analysis\"}, PDFPlumberParser(mode=mode)),\n",
-    "    (None, {}, PyPDFium2Parser(mode=mode))\n",
+    "    (\n",
+    "        \"name\",\n",
+    "        {\"producer\": \"Microsoft\", \"creator\": \"Microsoft\"},\n",
+    "        PyMuPDFParser(mode=mode),\n",
+    "    ),\n",
+    "    (\n",
+    "        \"Latex\",\n",
+    "        {\"creator\": \"LaTeX\", \"page1\": \"Recent advances in document image analysis\"},\n",
+    "        PDFPlumberParser(mode=mode),\n",
+    "    ),\n",
+    "    (None, {}, PyPDFium2Parser(mode=mode)),\n",
     "]\n",
     "\n",
     "loader = PDFRouterLoader(\n",
@@ -434,11 +460,19 @@
     "from langchain_community.document_loaders import FileSystemBlobLoader\n",
     "from langchain_community.document_loaders.generic import GenericLoader\n",
     "\n",
-    "mode=\"single\"\n",
+    "mode = \"single\"\n",
     "routes = [\n",
-    "    (\"name\",{\"producer\":\"Microsoft\", \"creator\":\"Microsoft\"}, PyMuPDFParser(mode=mode)),\n",
-    "    (\"Latex\",{\"creator\":\"LaTeX\",\"page1\":\"Recent advances in document image analysis\"}, PDFPlumberParser(mode=mode)),\n",
-    "    (None, {}, PyPDFium2Parser(mode=mode))\n",
+    "    (\n",
+    "        \"name\",\n",
+    "        {\"producer\": \"Microsoft\", \"creator\": \"Microsoft\"},\n",
+    "        PyMuPDFParser(mode=mode),\n",
+    "    ),\n",
+    "    (\n",
+    "        \"Latex\",\n",
+    "        {\"creator\": \"LaTeX\", \"page1\": \"Recent advances in document image analysis\"},\n",
+    "        PDFPlumberParser(mode=mode),\n",
+    "    ),\n",
+    "    (None, {}, PyPDFium2Parser(mode=mode)),\n",
     "]\n",
     "\n",
     "loader = GenericLoader(\n",
@@ -446,9 +480,7 @@
     "        path=\"./example_data/\",\n",
     "        glob=\"*.pdf\",\n",
     "    ),\n",
-    "    blob_parser=PDFRouterParser(\n",
-    "        routes=routes\n",
-    "    ),\n",
+    "    blob_parser=PDFRouterParser(routes=routes),\n",
     ")\n",
     "docs = loader.load()\n",
     "print(docs[0].page_content)\n",
