--- a/docs/docs/integrations/document_loaders/new_pdrouter.ipynb
+++ b/docs/docs/integrations/document_loaders/new_pdrouter.ipynb
@@ -78,9 +78,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\r\n",
-      "pdfplumber 0.11.4 requires pdfminer.six==20231228, but you have pdfminer-six 20240706 which is incompatible.\u001b[0m\u001b[31m\r\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n",
+      "\u001B[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\r\n",
+      "pdfplumber 0.11.4 requires pdfminer.six==20231228, but you have pdfminer-six 20240706 which is incompatible.\u001B[0m\u001B[31m\r\n",
+      "\u001B[0mNote: you may need to restart the kernel to use updated packages.\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -116,7 +116,7 @@
     "routes = [\n",
     "    (\n",
     "        \"name\",\n",
-    "        {\"producer\": \"Microsoft\", \"creator\": \"Microsoft\"},\n",
+    "        {\"producer\": \"Microsoft\", \"creator\": \"Excel\"},\n",
     "        PyMuPDFParser(mode=mode),\n",
     "    ),\n",
     "    (\n",
