--- a/docs/docs/integrations/document_loaders/pdfplumber.ipynb
+++ b/docs/docs/integrations/document_loaders/pdfplumber.ipynb
@@ -1152,6 +1152,32 @@
   {
    "metadata": {},
    "cell_type": "markdown",
+   "source": "It is possible to work with files from cloud storage."
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "from langchain_community.document_loaders import CloudBlobLoader\n",
+    "from langchain_community.document_loaders.generic import GenericLoader\n",
+    "\n",
+    "loader = GenericLoader(\n",
+    "    blob_loader=CloudBlobLoader(\n",
+    "        url=\"s3:/mybucket\", # Supports s3://, az://, gs://, file:// schemes.\n",
+    "        glob=\"*.pdf\",\n",
+    "    ),\n",
+    "    blob_parser=PDFPlumberParser(),\n",
+    ")\n",
+    "docs = loader.load()\n",
+    "print(docs[0].page_content)\n",
+    "pprint.pp(docs[0].metadata)"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "## API reference\n",
     "\n",
