--- a/docs/docs/how_to/document_loader_custom.ipynb
+++ b/docs/docs/how_to/document_loader_custom.ipynb
@@ -758,9 +758,9 @@
     "from langchain_community.document_loaders.blob_loaders import CloudBlobLoader\n",
     "\n",
     "cloud_blob_loader = CloudBlobLoader(\n",
-    "    url=\"s3://mybucket\", # Supports s3://, az://, gs://, file:// schemes.\n",
-    "    glob=\"*.pdf\", \n",
-    "    show_progress=True\n",
+    "    url=\"s3://mybucket\",  # Supports s3://, az://, gs://, file:// schemes.\n",
+    "    glob=\"*.pdf\",\n",
+    "    show_progress=True,\n",
     ")\n",
     "for blob in cloud_blob_loader.yield_blobs():\n",
     "    print(blob)"
