--- a/docs/docs/integrations/document_loaders/new_pdfrouter.ipynb
+++ b/docs/docs/integrations/document_loaders/new_pdfrouter.ipynb
@@ -77,9 +77,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\r\n",
-      "pdfplumber 0.11.4 requires pdfminer.six==20231228, but you have pdfminer-six 20240706 which is incompatible.\u001B[0m\u001B[31m\r\n",
-      "\u001B[0mNote: you may need to restart the kernel to use updated packages.\n",
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\r\n",
+      "pdfplumber 0.11.4 requires pdfminer.six==20231228, but you have pdfminer-six 20240706 which is incompatible.\u001b[0m\u001b[31m\r\n",
+      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -109,12 +109,12 @@
    },
    "outputs": [],
    "source": [
+    "from patch_langchain_community.document_loaders import PDFRouterLoader\n",
     "from patch_langchain_community.document_loaders.parsers import (\n",
-    "    PyMuPDFParser,\n",
     "    PDFPlumberParser,\n",
+    "    PyMuPDFParser,\n",
     "    PyPDFium2Parser,\n",
     ")\n",
-    "from patch_langchain_community.document_loaders import PDFRouterLoader\n",
     "\n",
     "mode = \"single\"\n",
     "routes = [\n",
@@ -1148,9 +1148,10 @@
     }
    ],
    "source": [
-    "from patch_langchain_community.document_loaders.parsers import PDFRouterParser\n",
     "from langchain_community.document_loaders import FileSystemBlobLoader\n",
     "from langchain_community.document_loaders.generic import GenericLoader\n",
+    "\n",
+    "from patch_langchain_community.document_loaders.parsers import PDFRouterParser\n",
     "\n",
     "mode = \"single\"\n",
     "routes = [\n",
